Add controls GUI (#5)
* Add controls

- Shows on single tap/click

- Brief flash of the control area upon click/tap detection
  to let the user know their input was received

- Controls scale to fit within the current window size

- Controls visibility state survives rotation

- Single tap response is delayed long enough to not interfere
  with pre-existing double-click behavior to toggle full-screen mode

- Windows: Must distribute libpng DLL alongside .exe due to limitation of
  DSL3_image

- Update Windows GH runner

- Update Linux snap config

- Note: Android is using pre-release version of SDL3_image, until upstream fix from SDL team is released for 16kB page size issue

- Update README.md files

--- a/shared/CMakeLists.txt
+++ b/shared/CMakeLists.txt
@@ -7,7 +7,8 @@ if(APPLE)
 elseif(WIN32)
     include(FindPkgConfig)
     pkg_search_module(SDL REQUIRED sdl3)
-    include_directories(${SDL_INCLUDE_DIRS})
+    pkg_search_module(SDL_IMAGE sdl3_image SDL3_image)
+    include_directories(${SDL_INCLUDE_DIRS} ${SDL_IMAGE_INCLUDE_DIRS})
 elseif(ANDROID OR UNIX)
     if(NOT TARGET SDL3::SDL3)
         find_package(SDL3 CONFIG)
@@ -24,6 +25,23 @@ elseif(ANDROID OR UNIX)
     if(NOT TARGET SDL3::SDL3)
         message(FATAL_ERROR "Cannot find SDL3.")
     endif()
+
+    # Find SDL3_image
+    if(NOT TARGET SDL3_image::SDL3_image)
+        find_package(SDL3_image CONFIG)
+    endif()
+
+    if(NOT TARGET SDL3_image::SDL3_image)
+        find_library(SDL3_IMAGE_LIBRARY NAMES "SDL3_image")
+        find_path(SDL3_IMAGE_INCLUDE_DIR NAMES "SDL3/SDL_image.h")
+        add_library(SDL3_image::SDL3_image UNKNOWN IMPORTED)
+        set_property(TARGET SDL3_image::SDL3_image PROPERTY IMPORTED_LOCATION "${SDL3_IMAGE_LIBRARY}")
+        set_property(TARGET SDL3_image::SDL3_image PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${SDL3_IMAGE_INCLUDE_DIR}")
+    endif()
+
+    if(NOT TARGET SDL3_image::SDL3_image)
+        message(FATAL_ERROR "Cannot find SDL3_image.")
+    endif()
 else()
     message(FATAL_ERROR "CMake is not supported for this platform.")
 endif()
@@ -31,7 +49,33 @@ endif()
 # Android: To add logging, use this:
 #find_library(log-lib log)
 
-set(SOURCES acidwarp.c bit_map.c display.c draw.c gen_img.c img_float.c palinit.c rolnfade.c)
+set(SOURCES acidwarp.c bit_map.c display.c draw.c gen_img.c img_float.c palinit.c rolnfade.c remote_overlay.c)
+
+# Embed remote.png as a binary resource for Linux
+if(UNIX AND NOT ANDROID)
+    set(REMOTE_PNG_PATH "${CMAKE_CURRENT_SOURCE_DIR}/remote.png")
+    set(REMOTE_PNG_OBJ "${CMAKE_CURRENT_BINARY_DIR}/remote_png.o")
+
+    add_custom_command(
+        OUTPUT ${REMOTE_PNG_OBJ}
+        COMMAND ${CMAKE_COMMAND} -E copy "${REMOTE_PNG_PATH}" remote.png
+        COMMAND ${CMAKE_OBJCOPY} --input binary --output elf64-x86-64
+                --binary-architecture i386:x86-64
+                remote.png remote_png.o
+        COMMAND ${CMAKE_OBJCOPY}
+                --redefine-sym _binary_remote_png_start=_binary_remote_png_start
+                --redefine-sym _binary_remote_png_end=_binary_remote_png_end
+                --redefine-sym _binary_remote_png_size=_binary_remote_png_size
+                remote_png.o
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        DEPENDS ${REMOTE_PNG_PATH}
+        COMMENT "Embedding remote.png as binary resource"
+        VERBATIM
+    )
+
+    # Add the object file to sources
+    list(APPEND SOURCES ${REMOTE_PNG_OBJ})
+endif()
 
 if(ANDROID)
     add_library(main SHARED ${SOURCES})
@@ -42,10 +86,10 @@ endif()
 if (WIN32)
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
     add_definitions(-DGLEW_STATIC)
-    target_link_libraries(main ${SDL_STATIC_LDFLAGS} glew32 opengl32)
+    target_link_libraries(main ${SDL_STATIC_LDFLAGS} ${SDL_IMAGE_STATIC_LDFLAGS} glew32 opengl32)
 elseif(ANDROID OR UNIX)
     # Android: Add ${log-lib} if logging desired
-    target_link_libraries(main PRIVATE SDL3::SDL3 GLESv2)
+    target_link_libraries(main PRIVATE SDL3::SDL3 SDL3_image::SDL3_image GLESv2)
 else()
     # macOS / iOS / iPadOS: these are not cmake builds
 endif()
