--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -11,23 +11,24 @@ if(NOT CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
 endif()
 
 include(FindPkgConfig)
-pkg_search_module(SDL REQUIRED sdl3)
-include_directories(${SDL_INCLUDE_DIRS})
 
-# Find OpenGL for desktop Linux
+#set(BUILD_SHARED_LIBS OFF)
+
+# Note we don't link PNG.  SDL3_image (As of November 2025) is compiled in a way 
+# that doesn't allow PNG to be statically linked.  Therefore the .DLL file must 
+# be distributed alongside the .exe file.
+
+find_package(SDL3 REQUIRED)
+find_package(ZLIB REQUIRED)
+find_package(SDL3_image CONFIG REQUIRED)
 find_package(OpenGL REQUIRED)
-if(NOT OPENGL_FOUND)
-    message(FATAL_ERROR "OpenGL 4.1+ is required for Windows builds")
-endif()
 
 add_subdirectory(acidwarp)
 
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
 add_definitions(-DGLEW_STATIC)
 
-# Create an executable that links to the main library from the submodule
-# Include the resource file to embed the icon
+# Include the resource file to embed the icon and metadata
 add_executable(acidwarp-windows acidwarp/acidwarp.c acidwarp.rc)
 
-# Link against the library and OpenGL for desktop
-target_link_libraries(acidwarp-windows PRIVATE main ${SDL_STATIC_LDFLAGS} glew32 opengl32)
+target_link_libraries(acidwarp-windows PRIVATE main SDL3::SDL3-static ZLIB::ZLIB SDL3_image::SDL3_image-static glew32 opengl32)
