Updates for iOS, Android, Linux
- Update Linux build
  - Update snap config
  - Update CMakeLists.txt to fix error when uploading snap

- Add Android 5.0.0+18 apk's, aab
  - Also, update android SDL3_image prerelease .aar for 16kb pages

- Update README.md for iOS

--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -54,6 +54,9 @@ add_executable(acidwarp-linux acidwarp/acidwarp.c)
 # Link against the library and OpenGL for desktop
 target_link_libraries(acidwarp-linux PRIVATE main ${OPENGL_LIBRARIES} SDL3::SDL3 SDL3_image::SDL3_image m)
 
+# Security: Disable executable stack
+target_link_options(acidwarp-linux PRIVATE "-Wl,-z,noexecstack")
+
 # Install targets
 install(TARGETS acidwarp-linux DESTINATION bin)
 install(FILES acidwarp.desktop DESTINATION share/applications)
