--- a/.github/workflows/build-all-platforms.yml
+++ b/.github/workflows/build-all-platforms.yml
@@ -82,8 +82,8 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
+          working-directory: ./android
           script: |
-            cd android
             ./gradlew build connectedCheck
             adb pull /storage/emulated/0/Android/data/com.dermochelys.acidwarp/files/screenshots . || echo "No screenshots found"
 
