--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,6 +30,10 @@ android {
         }
     }
 
+    testOptions {
+        animationsDisabled = true
+    }
+
     sourceSets.main {
         jniLibs.srcDir 'libs'
     }
@@ -315,4 +319,10 @@ tasks.register('downloadSDL3', DownloadSDL3Task) {
 // Make sure SDL3 is downloaded before building
 tasks.named('preBuild').configure {
     dependsOn 'downloadSDL3'
+}
+
+// Configure connected tests to leave APKs installed so we can pull screenshots
+tasks.withType(com.android.build.gradle.internal.tasks.DeviceProviderInstrumentTestTask).configureEach {
+    // Don't uninstall APKs after running tests
+    uninstallIncompatibleApks = false
 }
