--- a/.github/workflows/build-all-platforms.yml
+++ b/.github/workflows/build-all-platforms.yml
@@ -398,60 +398,20 @@ jobs:
       - name: Select Xcode version
         run: sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
 
-      - name: Boot simulator and run UI tests
+      - name: Run UI tests
         working-directory: ios
-        timeout-minutes: 20
+        timeout-minutes: 15
         run: |
-          # Get the simulator device ID
-          DEVICE_ID=$(xcrun simctl list devices available | grep "iPhone 16" | grep -v "unavailable" | head -1 | grep -oE '\([A-Z0-9-]+\)' | tr -d '()')
-
-          if [ -z "$DEVICE_ID" ]; then
-            echo "Error: Could not find iPhone 16 simulator"
-            xcrun simctl list devices
-            exit 1
-          fi
-
-          echo "Using simulator: $DEVICE_ID"
-
-          # Boot the simulator explicitly
-          echo "Booting simulator..."
-          xcrun simctl boot "$DEVICE_ID" || echo "Simulator already booted"
-
-          # Wait for simulator to be fully booted
-          echo "Waiting for simulator to boot..."
-          for i in {1..30}; do
-            if xcrun simctl bootstatus "$DEVICE_ID" 2>&1 | grep -q "Device already booted"; then
-              echo "Simulator is ready"
-              break
-            fi
-            if [ $i -eq 30 ]; then
-              echo "Timeout waiting for simulator to boot"
-              exit 1
-            fi
-            sleep 2
-          done
-
-          # Check simulator status before running tests
-          echo "Simulator status:"
-          xcrun simctl list devices | grep -A 5 "iPhone 16"
-
-          # Run tests with timeout
-          echo "Running UI tests..."
           set -o pipefail
           xcodebuild test \
             -project acidwarp-ios.xcodeproj \
             -scheme acidwarp \
             -configuration Release \
-            -sdk iphonesimulator \
-            -destination "platform=iOS Simulator,id=$DEVICE_ID" \
+            -destination 'platform=iOS Simulator,name=iPhone 16' \
             -derivedDataPath ./build \
-            -test-timeouts-enabled YES \
-            -maximum-test-execution-time-allowance 120 \
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO | tee xcodebuild.log
-
-          echo "Tests completed"
 
       - name: Upload xcodebuild log
         if: failure()
